--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -286,12 +286,14 @@
             }
 
             $(document).ready(function () {
+                //Random bg image bg0 - bg7
                 document.getElementById("bg").style.backgroundImage = "url('./img/bg" + Math.floor(Math.random() * 8) + ".jpg')";
 
                 var condition = [[${ form.result }]];
                 if (condition == 'register_success') {
                     $('#message-modal').modal('show');
                 }
+
 
 
 
