update dl file html

--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -52,6 +52,74 @@
     </div>
 
 
+    <div class="main">
+        <div class="section">
+            <div class="container">
+                <div class="title">
+                    <h1>Download</h1>
+                </div>
+        
+                <div class="container">
+        
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="img\interface\welcome.jpg" width="100%">
+                        </div>
+        
+                        <div class="col-md-6">
+                            <div class="title">
+                                <h2>Client</h2>
+                                <h3>Version : 0.1 Bata
+                                    <br>
+                                    <small>disclaimer<br>this software for research and development not for use commercial.<br>
+                                        the license orignal by BROCCOLI/GungHo Online Entertainment,Inc./HEADLOCK Inc.<br>
+                                        Offering by : bokie.tarathep@gmail.com</small>
+                                </h3>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <button type="button" class="btn btn-outline-warning btn-lg">Download</button>
+                                </div>
+                            </div>
+        
+                            <div class="title">
+                                <h2>Server</h2>
+                                <h3>Version : rev 1.0
+                                    <br>
+                                    <small>disclaimer<br>this software for research and development not for use commercial.<br>
+                                        Software Open Source license : © BOKIE TARATHEP LICENSED UNDER THE APACHE 2.0
+                                        LICENSE<br>
+                                        you can join with me for development and fix bug , for this infomation at
+                                        Github<br></small>
+                                </h3>
+                            </div>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <a href="https://github.com/tarathep" class="btn btn-outline-default btn-lg">Github</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+        
+                    <!-- Orignal Soundtrack & Music Video -->
+        
+                    <div class="row">
+                        <h2>Orignal Soundtrack & Music Video</h2>
+                        <!-- <div class="col-md-6">
+                    
+                  </div>
+                  <div class="col-md-6">
+                     y
+                  </div> -->
+        
+        
+        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
  
 
     <!--------------------------------------- Modal Bodies ------------------------------------- -->
@@ -164,6 +232,12 @@
 
     <!-----------------------------------------  end modal ----------------------------------------->
    
+
+
+        
+        
+        
+    <footer th:insert="/footer.html :: footer" class="footer"></footer>
 </body>
 <!--   Core JS Files   -->
 <script src="./js/core/jquery.min.js" type="text/javascript"></script>
@@ -246,6 +320,6 @@
 
     function downloadClient(){
         console.log("download here")
-        window.open('https://drive.google.com/file/d/1bH1lUAAghotkd_IFuumWtZOjsrAFsqxs/view','_blank');
+        window.open('https://support.wwf.org.uk/earth_hour/index.php?type=individual','_blank');
     }
 </script>
