fix path nav  home.html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
 <body class="index-page sidebar-collapse">
 
     <!-- Navbar -->
-    <header th:insert="/navbar.html :: header"> </header>
+    <header th:insert="navbar.html :: header"> </header>
     <!-- End Navbar -->
     
 
