add download page , reflactor project

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -24,8 +24,8 @@
                         Guide<br>แนวทางเริ่มต้น</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" style="font-size: 10px;"
-                        class="btn btn-info btn-round" onclick="downloadClient();">ダウンロード<br>Download<br>ดาวโหลด</button>
+                    <a href="/download" type="button" style="font-size: 10px;"
+                        class="btn btn-info btn-round" >ダウンロード<br>Download<br>ดาวโหลด</a>
                 </li>
                 <li class="nav-item">
                     <button type="button" style="font-size: 10px;" class="btn btn-success btn-round"
