--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,253 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8" />
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>ECO</title>
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,shrink-to-fit=no' name='viewport' />
-   
-    <!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- CSS Files -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./css/paper-kit.css" rel="stylesheet" />
-
-</head>
-
+<head th:insert="header.html :: head"> </head>
 <body class="index-page sidebar-collapse">
-
     <!-- Navbar -->
     <header th:insert="navbar.html :: header"> </header>
+    <div th:insert="backgroud.html :: div"> </div>
+    <div th:insert="modal.html :: div"> </div>
     <!-- End Navbar -->
-    
+
+    <!------------------------- BODY ------------------------->
 
 
-    <!-- style="background-image: url('./img/bg1.jpg')" -->
-    <div id="bg" class="page-header section-dark">
-        <div class="filter"></div>
-        <div class="content-center">
-            <div class="container">
-
-                <h2 class="presentation-subtitle text-center">エミル・クロニクル・オンライン </h2>
-            </div>
-        </div>
-        <div class="moving-clouds" style="background-image: url('./img/clouds.png'); "></div>
-        <h6 class="category category-absolute">
-            <span class="copyright">©
-                <script>document.write(new Date().getFullYear())</script>
-                Bokie Tarathep licensed under the Apache 2.0 license
-            </span>
-            <span class="copyright"> ©
-                BROCCOLI/GungHo Online Entertainment Inc./HEADLOCK Inc.
-            </span>
-
-            <!-- <a href="https://www.creative-tim.com" target="_blank">
-                <img src="./assets/img/creative-tim-white-slim2.png" class="creative-tim-logo">
-            </a> -->
-        </h6>
-    </div>
-
-
- 
-
-    <!--------------------------------------- Modal Bodies ------------------------------------- -->
-
-     <!-- Modal Login -->
-    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-hidden="false">`
-        <div class="modal-dialog modal-register">
-            <div class="modal-content">
-                <div class="modal-header no-border-header text-center">
-                    <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button> -->
-
-                    <h3 class="modal-title text-center">ECO Private Server</h3>
-                    <p>Log in to your account</p>
-                </div>
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label>Username</label>
-                        <input type="text" value="" placeholder="Username" class="form-control" />
-                    </div>
-                    <div class="form-group">
-                        <label>Password</label>
-                        <input type="password" value="" placeholder="Password" class="form-control" />
-                    </div>
-                    <button class="btn btn-block btn-round"> Log in</button>
-                </div>
-                <div class="modal-footer no-border-footer">
-                    <span class="text-muted  text-center">Looking
-                        <a href="#" data-dismiss="modal" data-toggle="modal" data-target="#loginModal2">create an
-                            account</a> ?</span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--Modal Register-->
-    <div class="modal fade" id="loginModal2" tabindex="-1" role="dialog" aria-hidden="false">
-        <div class="modal-dialog modal-register">
-            <div class="modal-content">
-                <div class="modal-header no-border-header text-center">
-                    <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button> -->
-
-                    <h3 class="modal-title text-center">ECO Private Server</h3>
-                    <p>Register create your account</p>
-                </div>
-
-
-        
-
-                <div class="modal-body">
-                    <form id="register_form" action="#" th:action="@{/}" th:object="${form}" method="post">
-                        <div class="form-group">
-                            <label>Enter Username</label>
-                            <input type="text" id="r_username" th:field="*{username}" value=""
-                                placeholder="username" class="form-control"
-                                onchange="onclick_input_username_register();" required  />
-                        </div>
-                        <div class="form-group">
-                            <label>Enter Password</label>
-                            <input type="password" id="r_password" th:field="*{password}" value="" placeholder="Password"
-                                class="form-control" required/>
-                            <input type="password" id="r_password_c" value="" placeholder="Confirm Password"
-                                class="form-control" required/>
-                        </div>
-
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" id="r_del_password" th:field="*{del_password}" value="" placeholder="name@domain.com" class="form-control" required/>
-                        </div>
-
-                        <button onclick="checksubmit_register();" class="btn btn-block btn-round"> Sign Up</button>
-                    </form>
-                </div>
-                <div class="modal-footer no-border-footer">
-                    <span class="text-muted  text-center">Looking <a href="#" data-target="#loginModal">next
-                            step</a> ?</span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal Message -->
-    <div class="modal fade bd-example-modal-sm" id="message-modal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel"><strong>System Message</strong></h5>
-                </div>
-                <div class="modal-body" style="text-align: center;">
-                    <strong>Register Successfully</strong> <br> You can start playing right now.
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default btn-link" data-dismiss="modal">OK</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal Message -->
-    <div class="modal fade bd-example-modal-sm" id="message-modal-dul" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-sm" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel"><strong>System Message</strong></h5>
-                </div>
-                <div class="modal-body" style="text-align: center;">
-                    <strong>Username duplicated</strong> <br> username already exist!
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default btn-link" data-dismiss="modal">OK</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <!-----------------------------------------  end modal ----------------------------------------->
-   
+    <!------------------------- BODY ------------------------->
 </body>
+
+
 <!--   Core JS Files   -->
 <script src="./js/core/jquery.min.js" type="text/javascript"></script>
 <script src="./js/core/popper.min.js" type="text/javascript"></script>
 <script src="./js/core/bootstrap.min.js" type="text/javascript"></script>
-<!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
 <script src="./js/plugins/bootstrap-switch.js"></script>
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
 <script src="./js/plugins/nouislider.min.js" type="text/javascript"></script>
-<!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
 <script src="./js/plugins/moment.min.js"></script>
 <script src="./js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-<!-- Control Center for Paper Kit: parallax effects, scripts for the example pages etc -->
 <script src="./js/paper-kit.js?v=2.2.0" type="text/javascript"></script>
 
 <script th:inline="javascript">
-    function onclick_input_username_register() {
-        // var value = document.getElementById("r_username").value;
-        // //username or password is not duplicate
-        // alert(value);
-
-    }
 
     function checksubmit_register() {
         var check = true;
-        //var form = document.getElementById("register_form");
-        
         var username = document.getElementById("r_username").value;
         var password = document.getElementById("r_password").value;
         var password_c = document.getElementById("r_password_c").value;
-        
-
+    
         if(username == "" || password == "" ||del_password == ""){
-            //alert("field is not empty!");
+            
             check = false;
             return;
         }
         if(password != password_c){
-            //alert("password is not match !");
+           
             check = false;
             return;
         }
-        
-        if(check){
-            //form.submit();
-        }
-        
-        
     }
-
+    
     $(document).ready(function () {
         //Random bg image bg0 - bg7
         document.getElementById("bg").style.backgroundImage = "url('./img/bg" + Math.floor(Math.random() * 8) + ".jpg')";
-
-        var condition = [[${ form.result }]];
+    
+        var condition = [[${form.result}]];
         if (condition == 'register_success') {
             $('#message-modal').modal('show');
         }
         if (condition == 'username already exist') {
             $('#message-modal-dul').modal('show');
         } 
-
-
-        // function scrollToDownload() {
-
-        //     if ($('.section-download').length != 0) {
-        //         $("html, body").animate({
-        //             scrollTop: $('.section-download').offset().top
-        //         }, 1000);
-        //     }
-        // }
     });
-
+    
     function downloadClient(){
         console.log("download here")
         window.open('https://drive.google.com/file/d/1Fw4ZFEFawzxsBsjyJGjNnRipqz2rWgsX','_blank');
