update license , add workflow

--- a/src/main/resources/templates/backgroud.html
+++ b/src/main/resources/templates/backgroud.html
@@ -11,7 +11,7 @@
     <h6 class="category category-absolute">
         <span class="copyright">©
             <script>document.write(new Date().getFullYear())</script>
-            Bokie Tarathep licensed under the Apache 2.0 license
+            Bokie Tarathep licensed under the GNU General Public License
         </span>
         <span class="copyright"> ©
             BROCCOLI/GungHo Online Entertainment Inc./HEADLOCK Inc.
