--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -78,7 +78,7 @@
                                 <h3>Version : rev 1.0
                                     <br>
                                     <small>disclaimer<br>this software for research and development not for use commercial.<br>
-                                        Software Open Source license : © BOKIE TARATHEP LICENSED UNDER THE APACHE 2.0
+                                        Software Open Source license : © BOKIE TARATHEP licensed under the GNU General Public
                                         LICENSE<br>
                                         you can join with me for development and fix bug , for this infomation at
                                         Github<br></small>
