--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -95,7 +95,7 @@
                     <!-- Orignal Soundtrack & Music Video -->
         
                     <div class="row">
-                        <h2>Orignal Soundtrack & Music Video</h2>
+                        <!-- <h2>Orignal Soundtrack & Music Video</h2> -->
                         <!-- <div class="col-md-6">
                     
                   </div>
