--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -158,6 +158,6 @@
     });
     
     function downloadClient(){
-        window.open('https://drive.google.com/file/d/1Fw4ZFEFawzxsBsjyJGjNnRipqz2rWgsX','_blank');
+        window.open('xxx','_blank');
     }
 </script>
