--- a/src/main/resources/templates/download.html
+++ b/src/main/resources/templates/download.html
@@ -158,6 +158,6 @@
     });
     
     function downloadClient(){
-        window.open('yyy','_blank');
+        window.open('https://drive.google.com/file/d/12r8HRxpc_6ckPk1g7ITYr5pMI8ayfN6g/view?usp=sharing','_blank');
     }
 </script>
