add content about

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -9,7 +9,24 @@
     <!-- End Navbar -->
 
     <!------------------------- BODY ------------------------->
-
+    <div class="main">
+        <div class="section">
+            <div class="container">
+                <div class="title">
+                    <h1>ECOの世界</h1>
+                </div>
+        
+                <div class="container">
+        
+        
+                    <!-- Orignal Soundtrack & Music Video -->
+        
+                    <div class="row">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!------------------------- BODY ------------------------->
 </body>
